--- a/eclipse_ws/biobank2/.classpath
+++ b/eclipse_ws/biobank2/.classpath
@@ -16,8 +16,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/gluegen.jar"/>
 	<classpathentry kind="lib" path="lib/jdom.jar"/>
 	<classpathentry kind="lib" path="lib/scanlib.jar"/>
-	<classpathentry kind="lib" path="lib/org.eclipse.nebula.cwt_0.9.0.HEAD.jar"/>
-	<classpathentry kind="lib" path="lib/org.eclipse.nebula.widgets.cdatetime_0.14.0.HEAD.jar"/>
 	<classpathentry kind="con" path="org.eclipse.tptp.platform.instrumentation.ui.ContainerInitializer/Build to Manage Libraries"/>
 	<classpathentry kind="lib" path="lib/DynamicJasper-3.0.14.jar">
 		<attributes>
@@ -25,5 +23,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="/biobank.common/lib/log4j-1.2.14.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.nebula.widgets.datechooser_1.0.0.HEAD.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.nebula.widgets.formattedtext_1.0.0.HEAD.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
