--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -12,6 +12,9 @@ bin.includes = META-INF/,\
                about.mappings,\
                lib/DynamicJasper-3.0.14.jar,\
                lib/jdt-compiler-3.1.1.jar,\
-               lib/mail.jar
+               lib/mail.jar,\
+               lib/org.eclipse.nebula.widgets.calendarcombo_1.0.0.jar,\
+               lib/org.eclipse.nebula.widgets.datechooser_1.0.0.HEAD.jar,\
+               lib/org.eclipse.nebula.widgets.formattedtext_1.0.0.HEAD.jar
 output.conf/ = bin/
 Bundle-NativeCode: /scanlib.dll
