--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -13,8 +13,10 @@ bin.includes = META-INF/,\
                lib/DynamicJasper-3.0.14.jar,\
                lib/jdt-compiler-3.1.1.jar,\
                lib/mail.jar,\
+               lib/org.eclipse.nebula.widgets.formattedtext_1.0.0.HEAD.jar,\
                lib/org.eclipse.nebula.widgets.calendarcombo_1.0.0.jar,\
-               lib/org.eclipse.nebula.widgets.datechooser_1.0.0.HEAD.jar,\
-               lib/org.eclipse.nebula.widgets.formattedtext_1.0.0.HEAD.jar
+               lib/commons-lang-2.4.jar
 output.conf/ = bin/
 Bundle-NativeCode: /scanlib.dll
+source.lib/commons-lang-2.4.jar = src/
+source.lib/org.eclipse.nebula.widgets.calendarcombo_1.0.0.jar = src/
