changed type for freezer 05

--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -12,6 +12,8 @@ bin.includes = META-INF/,\
                about.mappings,\
                lib/DynamicJasper-3.0.14.jar,\
                lib/jdt-compiler-3.1.1.jar,\
-               lib/mail.jar
+               lib/mail.jar,\
+               lib/commons-lang-2.4.jar
 output.conf/ = bin/
 Bundle-NativeCode: /scanlib.dll
+source.lib/commons-lang-2.4.jar = src/
