--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <project name="biobank2" basedir="." default="deploy">
+
   <!--
      Overall build file
      use command "ant -projecthelp" to display the targets.
@@ -37,10 +38,10 @@
   <property name="database.password" value="ozzy498" />
   <property name="req.jars.dir" value="jars" />
   <property name="biobank2.jar.files"
-            value="org.eclipse.nebula.cwt_0.9.0.HEAD.jar, org.eclipse.nebula.widgets.cdatetime_0.14.0.HEAD.jar, gluegen.jar,jdom.jar,scanlib.jar, commons-beanutils-1.8.0.jar, commons-digester-1.7.jar, commons-lang-2.4.jar,iText-2.1.0.jar, jasperreports-3.7.0.jar,DynamicJasper-3.0.14.jar, jdt-compiler-3.1.1.jar, mail.jar" />
+            value="org.eclipse.nebula.cwt_0.9.0.HEAD.jar, org.eclipse.nebula.widgets.cdatetime_0.14.0.HEAD.jar, gluegen.jar,ini4j-0.5.1.jar,jdom.jar,scanlib.jar, commons-beanutils-1.8.0.jar, commons-digester-1.7.jar, iText-2.1.0.jar, jasperreports-3.7.0.jar,DynamicJasper-3.0.14.jar, jdt-compiler-3.1.1.jar, mail.jar" />
   <property name="biobank.common.jar.files" value="commons-lang-2.4.jar,xstream-1.3.1.jar" />
   <property name="biobank.importer.jar.files"
-            value="commons-logging-1.1.1.jar,mysql-connector-java-5.1.7-bin.jar" />
+            value="mysql-connector-java-5.1.7-bin.jar" />
   <property name="cacore.system.jar.files"
             value="commons-collections-3.2.jar,commons-logging-1.1.jar" />
   <property name="test.output" location="testing" />
@@ -51,6 +52,24 @@
   <condition property="debugMode" value="-debug" else="">
     <equals arg1="${debug}" arg2="true" casesensitive="false" trim="true" />
   </condition>
+  <condition property="isHostAicmlMed">
+    <equals arg1="${host.name}" arg2="aicml-med"
+            casesensitive="true" trim="true" />
+  </condition>
+  <condition property="isHostCbsr">
+    <equals arg1="${host.name}" arg2="cbsr.biochem.ualberta.ca"
+            casesensitive="true" trim="true" />
+  </condition>
+  <condition property="isHostLocal">
+    <and>
+      <isfalse value="${isHostAicmlMed}" />
+      <isfalse value="${isHostCbsr}" />
+    </and>
+  </condition>
+  <condition property="isCaCoreFolderExists">
+    <available file="${cacore.sdk.dir}" type="dir"/>
+  </condition>
+
   <!--
      files included in the sdk build.xml - necessary to be sure that we have
      all the keys for the target we redefined
@@ -108,36 +127,8 @@
               trim="true" />
     </or>
   </condition>
-  <condition property="isHostAicmlMed">
-    <equals arg1="${host.name}" arg2="aicml-med"
-            casesensitive="true" trim="true" />
-  </condition>
-  <condition property="isHostCbsr">
-    <equals arg1="${host.name}" arg2="cbsr.biochem.ualberta.ca"
-            casesensitive="true" trim="true" />
-  </condition>
-  <condition property="isHostLocal">
-    <and>
-      <isfalse value="${isHostAicmlMed}" />
-      <isfalse value="${isHostCbsr}" />
-    </and>
-  </condition>
-
   <!-- end of copied part -->
-  <target name="check-jars-available">
-    <available file="${req.jars.dir}" type="dir" property="jars.available" />
-  </target>
-  <target name="jars-download" depends="check-jars-available"
-          unless="jars.available"
-          description="downloads required jars from the host machine">
-    <mkdir dir="${req.jars.dir}" />
-    <exec executable="curl">
-      <arg value="--silent" />
-      <arg value="-obiobank_jars.tar.bz2" />
-      <arg value="http://${host}/biobank_jars.tar.bz2" />
-    </exec>
-    <untar src="biobank_jars.tar.bz2" compression="bzip2" dest="." />
-  </target>
+
   <target name="check-cacore-sdk-available">
     <available file="${cacore.sdk.dir}/build.xml"
                property="cacore.sdk.available" />
@@ -185,7 +176,7 @@
     </pathconvert>
   </target>
   <!-- Eclipse -->
-  <target name="deploy-eclipse" depends="sdk-files,jars-download"
+  <target name="deploy-eclipse" depends="sdk-files"
           description="deploys the caCORE SDK beans to the eclipse project">
     <dependset>
       <srcfilelist dir="${cacore.sdk.dir}/system/lib"
@@ -230,8 +221,6 @@
                    files="${sdk.jar.files.basename}" />
       <targetfilelist dir="${eclipse.proj.dir.common}/lib"
                       files="${sdk.jar.files.basename}" />
-      <targetfilelist dir="${eclipse.proj.dir.importer}/lib"
-                      files="${sdk.jar.files.basename}" />
     </dependset>
     <copy todir="${eclipse.proj.dir.common}/lib">
       <fileset dir="${cacore.sdk.dir}/output/biobank2/package/remote-client/lib" />
@@ -248,9 +237,8 @@
       <filelist dir="${req.jars.dir}" files="${biobank2.jar.files}" />
     </copy>
     <copy todir="${eclipse.proj.dir.importer}/lib">
-      <filelist dir="${req.jars.dir}" files="${biobank.importer.jar.files}" />
-      <fileset dir="${cacore.sdk.dir}/output/biobank2/package/remote-client/lib" />
-      <filelist dir="${cacore.sdk.dir}/system/security/dist" files="sdk-security.jar" />
+      <filelist dir="${req.jars.dir}" files="${biobank.importer.jar.files}"/>
+      <fileset file="${cacore.sdk.dir}/output/biobank2/package/remote-client/lib/log4j-1.2.14.jar"/>
     </copy>
   </target>
   <!-- JBoss -->
@@ -308,7 +296,6 @@
 
   <target name="deploy"
           description="deploys to JBoss and Eclipse project">
-    <antcall target="jars-download" />
     <antcall target="deploy-eclipse" />
     <antcall target="deploy-jboss" />
   </target>
@@ -440,15 +427,19 @@
       <fileset dir="${eclipse.proj.dir.common}/lib" includes="**/*.jar" />
       <fileset dir="${eclipse.proj.dir.importer}/lib" includes="**/*.jar" />
     </delete>
-    <delete dir="${req.jars.dir}" />
   </target>
 
+
   <target name="clean"
-          depends="tests-clean,clean-jars"
+          depends="tests-clean,clean-jars, clean-caCore"
           description="cleans caCORE SDK and deletes jars from eclipse projects">
-    <ant dir="${cacore.sdk.dir}" target="clean" inheritRefs="false" />
     <ant target="clean-jars" />
   </target>
+
+  <target name="clean-caCore" if="isCaCoreFolderExists">
+    <ant dir="${cacore.sdk.dir}" target="clean" inheritRefs="false" />
+  </target>
+
 
   <!-- JUnit -->
 
