--- a/build.xml
+++ b/build.xml
@@ -324,7 +324,7 @@
       <transaction src="${data.sql.dir}/sourceVessels.sql" />
       <transaction src="${data.sql.dir}/sampleTypes.sql" />
       <transaction src="${data.sql.dir}/containerLabelingScheme.sql" />
-      <transaction src="${data.sql.dir}/shippingCompany.sql" />
+      <transaction src="${data.sql.dir}/shippingMethod.sql" />
       <transaction src="${secu-log.dir}/schemaSecurityLogDump.sql" />
       <transaction>commit;</transaction>
       <classpath>
