--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -15,7 +15,9 @@ bin.includes = META-INF/,\
                lib/mail.jar,\
                lib/org.eclipse.nebula.widgets.formattedtext_1.0.0.HEAD.jar,\
                lib/org.eclipse.nebula.widgets.calendarcombo_1.0.0.jar,\
-               lib/commons-lang-2.4.jar
+               lib/commons-lang-2.4.jar,\
+               lib/org.eclipse.nebula.cwt_0.9.0.HEAD.jar,\
+               lib/org.eclipse.nebula.widgets.cdatetime_0.14.0.HEAD.jar
 output.conf/ = bin/
 Bundle-NativeCode: /scanlib.dll
 source.lib/commons-lang-2.4.jar = src/
