--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -231,44 +231,12 @@
             name="Print">
       </command>
       <command
-            id="edu.ualberta.med.biobank.commands.scanner.decodePlate1"
-            name="Decode Plate 1">
+            id="edu.ualberta.med.biobank.commands.scanner.decodePlate"
+            name="Decode Plate">
       </command>
       <command
-            id="edu.ualberta.med.biobank.commands.scanner.decodePlate2"
-            name="Decode Plate 2">
-      </command>
-      <command
-            id="edu.ualberta.med.biobank.commands.scanner.decodePlate3"
-            name="Decode Plate 3">
-      </command>
-      <command
-            id="edu.ualberta.med.biobank.commands.scanner.decodePlate4"
-            name="Decode Plate 4">
-      </command>
-      <command
-            id="edu.ualberta.med.biobank.commands.scanner.decodePlate5"
-            name="Decode Plate 5">
-      </command>
-      <command
-            id="edu.ualberta.med.biobank.commands.scanner.scanPlate1"
-            name="Scan Plate 1">
-      </command>
-      <command
-            id="edu.ualberta.med.biobank.commands.scanner.scanPlate2"
-            name="Scan Plate 2">
-      </command>
-      <command
-            id="edu.ualberta.med.biobank.commands.scanner.scanPlate3"
-            name="Scan Plate 3">
-      </command>
-      <command
-            id="edu.ualberta.med.biobank.commands.scanner.scanPlate4"
-            name="Scan Plate 4">
-      </command>
-      <command
-            id="edu.ualberta.med.biobank.commands.scanner.scanPlate5"
-            name="Scan Plate 5">
+            id="edu.ualberta.med.biobank.commands.scanner.scanPlate"
+            name="Scan Plate">
       </command>
    </extension>
    <extension
@@ -742,91 +710,20 @@
          </enabledWhen>
       </handler>
       <handler
-            class="edu.ualberta.med.biobank.handlers.DecodePlate1Handler"
-            commandId="edu.ualberta.med.biobank.commands.scanner.decodePlate1">
+            class="edu.ualberta.med.biobank.handlers.DecodePlateHandler"
+            commandId="edu.ualberta.med.biobank.commands.scanner.decodePlate">
          <activeWhen>
             <reference
-                  definitionId="scannerConfigPlugin.plate1Enabled">
+                  definitionId="scannerConfigPlugin.platesEnabled">
             </reference>
          </activeWhen>
       </handler>
       <handler
-            class="edu.ualberta.med.biobank.handlers.DecodePlate2Handler"
-            commandId="edu.ualberta.med.biobank.commands.scanner.decodePlate2">
+            class="edu.ualberta.med.biobank.handlers.ScanPlateHandler"
+            commandId="edu.ualberta.med.biobank.commands.scanner.scanPlate">
          <activeWhen>
             <reference
-                  definitionId="scannerConfigPlugin.plate2Enabled">
-            </reference>
-         </activeWhen>
-      </handler>
-      <handler
-            class="edu.ualberta.med.biobank.handlers.DecodePlate3Handler"
-            commandId="edu.ualberta.med.biobank.commands.scanner.decodePlate3">
-         <activeWhen>
-            <reference
-                  definitionId="scannerConfigPlugin.plate3Enabled">
-            </reference>
-         </activeWhen>
-      </handler>
-      <handler
-            class="edu.ualberta.med.biobank.handlers.DecodePlate4Handler"
-            commandId="edu.ualberta.med.biobank.commands.scanner.decodePlate4">
-         <activeWhen>
-            <reference
-                  definitionId="scannerConfigPlugin.plate4Enabled">
-            </reference>
-         </activeWhen>
-      </handler>
-      <handler
-            class="edu.ualberta.med.biobank.handlers.DecodePlate5Handler"
-            commandId="edu.ualberta.med.biobank.commands.scanner.decodePlate5">
-         <activeWhen>
-            <reference
-                  definitionId="scannerConfigPlugin.plate5Enabled">
-            </reference>
-         </activeWhen>
-      </handler> <handler
-            class="edu.ualberta.med.biobank.handlers.ScanPlate1Handler"
-            commandId="edu.ualberta.med.biobank.commands.scanner.scanPlate1">
-         <activeWhen>
-            <reference
-                  definitionId="scannerConfigPlugin.plate1Enabled">
-            </reference>
-         </activeWhen>
-      </handler>
-      <handler
-            class="edu.ualberta.med.biobank.handlers.ScanPlate2Handler"
-            commandId="edu.ualberta.med.biobank.commands.scanner.scanPlate2">
-         <activeWhen>
-            <reference
-                  definitionId="scannerConfigPlugin.plate2Enabled">
-            </reference>
-         </activeWhen>
-      </handler>
-      <handler
-            class="edu.ualberta.med.biobank.handlers.ScanPlate3Handler"
-            commandId="edu.ualberta.med.biobank.commands.scanner.scanPlate3">
-         <activeWhen>
-            <reference
-                  definitionId="scannerConfigPlugin.plate3Enabled">
-            </reference>
-         </activeWhen>
-      </handler>
-      <handler
-            class="edu.ualberta.med.biobank.handlers.ScanPlate4Handler"
-            commandId="edu.ualberta.med.biobank.commands.scanner.scanPlate4">
-         <activeWhen>
-            <reference
-                  definitionId="scannerConfigPlugin.plate4Enabled">
-            </reference>
-         </activeWhen>
-      </handler>
-      <handler
-            class="edu.ualberta.med.biobank.handlers.ScanPlate5Handler"
-            commandId="edu.ualberta.med.biobank.commands.scanner.scanPlate5">
-         <activeWhen>
-            <reference
-                  definitionId="scannerConfigPlugin.plate5Enabled">
+                  definitionId="scannerConfigPlugin.platesEnabled">
             </reference>
          </activeWhen>
       </handler>
@@ -1084,63 +981,15 @@
                id="edu.ualberta.med.biobank.menu.scanner"
                label="Scanner">
             <command
-                  commandId="edu.ualberta.med.biobank.commands.scanner.scanPlate1"
-                  id="edu.ualberta.med.biobank.menu.scanner.scanPlate1"
-                  label="Scan Plate 1"
+                  commandId="edu.ualberta.med.biobank.commands.scanner.scanPlate"
+                  id="edu.ualberta.med.biobank.menu.scanner.scanPlate"
+                  label="Scan Plate"
                   style="push">
             </command>
             <command
-                  commandId="edu.ualberta.med.biobank.commands.scanner.scanPlate2"
-                  id="edu.ualberta.med.biobank.menu.scanner.scanPlate2"
-                  label="Scan Plate 2"
-                  style="push">
-            </command>
-            <command
-                  commandId="edu.ualberta.med.biobank.commands.scanner.scanPlate3"
-                  id="edu.ualberta.med.biobank.menu.scanner.scanPlate3"
-                  label="Scan Plate 3"
-                  style="push">
-            </command>
-            <command
-                  commandId="edu.ualberta.med.biobank.commands.scanner.scanPlate4"
-                  id="edu.ualberta.med.biobank.menu.scanner.scanPlate4"
-                  label="Scan Plate 4"
-                  style="push">
-            </command>
-            <command
-                  commandId="edu.ualberta.med.biobank.commands.scanner.scanPlate5"
-                  id="edu.ualberta.med.biobank.menu.scanner.scanPlate5"
-                  label="Scan Plate 5"
-                  style="push">
-            </command>
-            <command
-                  commandId="edu.ualberta.med.biobank.commands.scanner.decodePlate1"
-                  id="edu.ualberta.med.biobank.menu.scanner.decodePlate1"
-                  label="Decode Plate 1"
-                  style="push">
-            </command>
-            <command
-                  commandId="edu.ualberta.med.biobank.commands.scanner.decodePlate2"
-                  id="edu.ualberta.med.biobank.menu.scanner.decodePlate2"
-                  label="Decode Plate 2"
-                  style="push">
-            </command>
-            <command
-                  commandId="edu.ualberta.med.biobank.commands.scanner.decodePlate3"
-                  id="edu.ualberta.med.biobank.menu.scanner.decodePlate3"
-                  label="Decode Plate 3"
-                  style="push">
-            </command>
-            <command
-                  commandId="edu.ualberta.med.biobank.commands.scanner.decodePlate4"
-                  id="edu.ualberta.med.biobank.menu.scanner.decodePlate4"
-                  label="Decode Plate 4"
-                  style="push">
-            </command>
-            <command
-                  commandId="edu.ualberta.med.biobank.commands.scanner.decodePlate5"
-                  id="edu.ualberta.med.biobank.menu.scanner.decodePlate5"
-                  label="Decode Plate 5"
+                  commandId="edu.ualberta.med.biobank.commands.scanner.decodePlate"
+                  id="edu.ualberta.med.biobank.menu.scanner.decodePlate"
+                  label="Decode Plate"
                   style="push">
             </command>
          </menu>
