checking container configuration is now selectable via config properties

--- a/eclipse_ws/biobank2.importer/conf/config.properties
+++ b/eclipse_ws/biobank2.importer/conf/config.properties
@@ -1,6 +1,7 @@
 # the following properties can be set to 'yes' or 'no'
+cbsr.check.container_config=yes
 cbsr.import.patients=no
-cbsr.import.shipments=yes
+cbsr.import.shipments=no
 cbsr.import.patient_visits=no
 #
 # the properties for a cabinet can be set to 'yes', 'no', or the 2 letter bin 
