--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -13,9 +13,7 @@ bin.includes = META-INF/,\
                lib/DynamicJasper-3.0.14.jar,\
                lib/jdt-compiler-3.1.1.jar,\
                lib/mail.jar,\
-               lib/commons-lang-2.4.jar,\
                lib/org.eclipse.nebula.cwt_0.9.0.HEAD.jar,\
                lib/org.eclipse.nebula.widgets.cdatetime_0.14.0.HEAD.jar
 output.conf/ = bin/
-Bundle-NativeCode: /scanlib.dll
-source.lib/commons-lang-2.4.jar = src/
+Bundle-NativeCode: scanlib.dll
