--- a/eclipse_ws/biobank.common/.classpath
+++ b/eclipse_ws/biobank.common/.classpath
@@ -25,6 +25,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/xercesImpl.jar"/>
 	<classpathentry exported="true" kind="lib" path="conf/"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.14.jar" sourcepath="C:/Documents and Settings/degrisda/projects/sources/log4j-1.2.14-src/src"/>
+	<classpathentry exported="true" kind="lib" path="lib/xpp3-1.1.3.4.C.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry exported="true" kind="lib" path="lib/xstream-1.3.1.jar"/>
