--- a/eclipse_ws/biobank.common/build.properties
+++ b/eclipse_ws/biobank.common/build.properties
@@ -25,5 +25,6 @@ bin.includes = META-INF/,\
                conf/,\
                bin/,\
                .,\
-               lib/xstream-1.3.1.jar
+               lib/xstream-1.3.1.jar,\
+               lib/xpp3-1.1.3.4.C.jar
 source.. = src/
