--- a/build.xml
+++ b/build.xml
@@ -66,8 +66,13 @@
       <isfalse value="${isHostCbsr}" />
     </and>
   </condition>
-  <condition property="isCaCoreFolderExists">
-    <available file="${cacore.sdk.dir}" type="dir"/>
+  <condition property="cacore.sdk.tar.available">
+    <available file="${cacore.sdk.filename}"
+               property="cacore.sdk.tar.available" />
+  </condition>
+  <condition property="cacore.sdk.available">
+    <available file="${cacore.sdk.dir}/build.xml"
+               property="cacore.sdk.available" />
   </condition>
 
   <!--
@@ -134,8 +139,8 @@
                property="cacore.sdk.available" />
   </target>
   <!-- caCORE SDK -->
-  <target name="cacore-download" depends="check-cacore-sdk-available"
-          unless="cacore.sdk.available"
+  <target name="cacore-download"
+          unless="cacore.sdk.tar.available"
           description="downloads caCORE SDK from the host machine">
     <mkdir dir="caCORE_SDK" />
     <echo message="downloading caCORE SDK..." />
@@ -144,18 +149,24 @@
       <arg value="-o${cacore.sdk.filename}" />
       <arg value="http://${host}/${cacore.sdk.filename}" />
     </exec>
-    <mkdir dir="${cacore.sdk.dir}" />
+  </target>
+  <target name="cacore-untar" depends="cacore-download"
+          unless="cacore.sdk.available"
+          description="untars the caCORE SDK tarball">
+    <echo message="untaring caCORE SDK..." />
     <untar src="${cacore.sdk.filename}" compression="gzip"
            dest="${cacore.sdk.dir}" />
   </target>
-  <target name="check-cacore-sdk-uptodate">
+  <target name="check-cacore-sdk-uptodate"
+          depends="cacore-untar"
+          unless="cacore.sdk.available">
     <uptodate property="cacore.sdk.uptodate"
               targetfile="${cacore.sdk.dir}/output/biobank2">
       <srcfiles file="sdk_conf/deploy.properties" />
       <srcfiles file="model/biobank2.uml" />
     </uptodate>
   </target>
-  <target name="sdk" depends="cacore-download,check-cacore-sdk-uptodate"
+  <target name="sdk" depends="check-cacore-sdk-uptodate,check-cacore-sdk-uptodate"
           unless="cacore.sdk.uptodate"
           description="builds the caCORE SDK from the data model">
     <copy file="sdk_conf/deploy.properties"
@@ -436,7 +447,8 @@
     <ant target="clean-jars" />
   </target>
 
-  <target name="clean-caCore" if="isCaCoreFolderExists">
+  <target name="clean-caCore"
+          unless="cacore.sdk.available">
     <ant dir="${cacore.sdk.dir}" target="clean" inheritRefs="false" />
   </target>
 
