--- a/eclipse_ws/biobank.common/build.properties
+++ b/eclipse_ws/biobank.common/build.properties
@@ -23,9 +23,8 @@ bin.includes = META-INF/,\
                lib/spring.jar,\
                lib/xercesImpl.jar,\
                conf/,\
-               bin/,\
-               .,\
                lib/xstream-1.3.1.jar,\
                lib/xpp3-1.1.3.4.C.jar,\
-               lib/biobank-remote.jar
-source.. = src/
+               lib/biobank-remote.jar,\
+               lib/hibernate-validator.jar,\
+               bin/
