doing a compare between BBPDB and BioBank2 databases

--- a/eclipse_ws/biobank2.importer/conf/config.properties
+++ b/eclipse_ws/biobank2.importer/conf/config.properties
@@ -1,6 +1,6 @@
 # the following properties can be set to 'yes' or 'no'
 cbsr.check.container_config=no
-cbsr.decode.patient_numbers=no
+cbsr.decode.patient_numbers=yes
 cbsr.import.patients=no
 cbsr.import.shipments=no
 cbsr.import.patient_visits=no
@@ -18,4 +18,4 @@ cbsr.import.freezer.03=no
 cbsr.import.freezer.05=no
 cbsr.import.freezer.99=no
 
-cbsr.import.scan_linked=yes
+cbsr.import.scan_linked=no
