resolves #523: when add a pvsourcevessel, can click next to do multiple entries

--- a/eclipse_ws/biobank.common/build.properties
+++ b/eclipse_ws/biobank.common/build.properties
@@ -28,3 +28,4 @@ bin.includes = META-INF/,\
                lib/biobank-remote.jar,\
                lib/hibernate-validator.jar,\
                bin/
+source.. = src/
