--- a/eclipse_ws/biobank.common/.classpath
+++ b/eclipse_ws/biobank.common/.classpath
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="log"/>
+	<classpathentry exported="true" kind="lib" path="conf/"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="bin/"/>
 	<classpathentry exported="true" kind="lib" path="lib/acegi-security-1.0.4.jar"/>
@@ -24,7 +26,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/sdk-writable-client-framework.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/spring.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/xercesImpl.jar"/>
-	<classpathentry exported="true" kind="lib" path="conf/"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.14.jar"/>
 	<classpathentry kind="lib" path="lib/biobank-remote.jar" sourcepath="/biobank.server"/>
 	<classpathentry kind="lib" path="lib/hibernate-validator.jar"/>
